# practice_git

./: .gitignore  CMakeLists.txt  README.md  calculator.cpp  calculator.h  main.cpp  run_tests.sh  test_output.txt
test/: calculator  calculator_tests  test_calculator.cpp
